<resources>

    <!--  Firebase  -->
    <string name="collectionUsers">users</string>
    <string name="collectionHelpSeekerRequests">helpSeekerRequests</string>
    <string name="collectionVolunteerRequest">volunteerRequest</string>

    <string name="collectionNodeStatus">status</string>

    <string name="app_name">HelpShake</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--  Authentication & Authorization  -->
    <string name="tag">Tag</string>
    <string name="error"> Error </string>
    <string name="email_verification">Email verification </string>
    <string name="email_verification_sent"> We\'ve sent a link to your email. After verification, sign in to a newly created account. </string>
    <string name="email_verification_pending"> Your email wasn\'t verified yet.Do it to get access to the account. </string>
    <string name="select_role_title">What\'s your situation?</string>
    <string name="help_seeker_role">I am on a quarantine and need help</string>
    <string name="volunteer_role">I want to volunteer</string>
    <string name="email_in_use">Such email is already in use!</string>
    <string name="error_message">Something went wrong. Try again later.</string>

    <!--  General  -->
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="not_allowed">Not allowed</string>

    <string name="help_seeker_photo">helpSeekerPhoto</string>
    <string name="volunteer_photo">volunteerPhoto</string>
    <string name="shop_image">shopImage</string>
    <string name="dog_image">DogImage</string>
    <string name="medicines_image">medicinesImage</string>
    <string name="map_point_image">mapPointImage</string>

    <string name="distance">Distance</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="accepted_requests">Accepted requests:</string>
    <string name="question_about_help_needed">What do you need help with?</string>
    <string name="provide_comment">Optional comment</string>
    <string name="comment">COMMENT</string>
    <string name="request_help">request help</string>
    <string name="my_requests">My requests</string>
    <string name="number_1">#1</string>
    <string name="volunteer">Volunteer:</string>
    <string name="contact">contact</string>
    <string name="mark_as_finished">mark as finished</string>
    <string name="more_information">More information</string>
    <string name="offered_help">Offered help:</string>
    <string name="click_profile_information">Click on th e photo to view the profile</string>
    <string name="needs">Needs:</string>
    <string name="comments_from_help_seeker">Comments from help seeker:</string>
    <string name="offer_help">offer help</string>

    <!--  Help Request  -->
    <string name="status">Status</string>
    <string name="details">Details</string>
    <string name="categories">Categories</string>
    <string name="category_other">Other</string>
    <string name="category_grocery">Grocery</string>
    <string name="category_drugstore">Drugstore</string>
    <string name="category_dog_walking">Dog Walking</string>

    <string name="add_request">Add request</string>
    <string name="adding_request">Adding request</string>
    <string name="help_request_add">Adding a help request</string>
    <string name="help_request_comment">Comment for a volunteer</string>

    <string name="open_requests">Open Requests</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="in_progress_requests">Requests in progress</string>
    <string name="completed_requests">Completed requests</string>

    <string name="request_published">Request is published</string>
    <string name="request_published_msg">Thank you! Our volunteers will reach out to you.</string>
    <string name="add_request_error">Request must contain at least one category</string>
    <string name="collection_doc_uid">helpSeekerUid</string>
    <string name="request_finished"> Task is finished</string>
    <string name="request_finished_msg"> Seems like the deal succeeded. Don\'t forget to leave a feedback to a volunteer :) </string>

    <string name="request_details">Request details</string>
    <string name="help_offered">The information was sent to the help seeker</string>
    <string name="help_offered_msg">"Thank you for declaring help!"</string>
    <string name="profile">Profile</string>
    <string name="help_requests_3">Help requests: 3</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="delete_account">Delete account</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="e_mail">E-mail</string>
    <string name="surname">Surname</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="request_title">Request title</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="notification_title">Notification title</string>
    <string name="notification_message">notification message</string>
    <string name="missing_phone_number">Phone number not entered</string>
    <string name="missing_phone_number_message">You must enter your phone number, if you want to add a new request.</string>
    <string name="missing_phone">Phone number not entered</string>
    <string name="missing_phone_message">You must enter a phone number, if you want to offer help, otherwise the help seeker will not be able to contact with you.</string>
    <string name="change_of_the_role">Change of the role</string>
    <string name="confirmation_question">Are you sure that you want to change the role and become a volunteer?</string>
    <string name="confirmation_question_role">Are you sure that you want to change the role and become a help seeker?</string>
    <string name="no">No</string>
    <string name="yes_confirm">Yes</string>
    <string name="change_role_on_volunteer">If you switch to a volunteer role, all your requests for help with open or pending status will be closed. You will lose access to them and volunteers will not receive information about them.</string>
    <string name="change_role_on_helpSeeker">If you switch to a help seeker role, all your help offers, that have not been approved by the help seeker yet, will be cancelled. They will not be displayed to a help seeker and you will also lose access to them.</string>
    <string name="info_text">info text</string>
    <string name="question">question</string>
    <string name="name_and_surname_2">name and surname</string>
    <string name="change_preferences">Change preferences</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_h">phone number</string>
    <string name="street">Street</string>
    <string name="house_number">House number</string>
    <string name="photouser">photoUser</string>
    <string name="settings">settings</string>
    <string name="distance_new">Distance ....</string>
    <string name="missing_request_title">Request must contain a title</string>
    <string name="missing_request_comment">Are you sure you don\'t want to add a comment?</string>
    <string name="missing_request_comment_message">It would allow volunteers to get familiarized with your request.</string>

</resources>