<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/rejectBtn"
        android:layout_width="117dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/reject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceText" />

    <ImageView
        android:id="@+id/volunteerPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/volunteer_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offeredHelpText"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/offeredHelpText"
        android:layout_width="205dp"
        android:layout_height="59dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/offered_help"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dogImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:contentDescription="@string/dog_image"
        app:layout_constraintEnd_toStartOf="@+id/medicinesImage"
        app:layout_constraintTop_toBottomOf="@+id/nameAndSurnameText"
        app:srcCompat="@drawable/dog" />

    <ImageView
        android:id="@+id/shopImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/shop_image"
        app:layout_constraintStart_toEndOf="@+id/volunteerPhoto"
        app:layout_constraintTop_toBottomOf="@+id/nameAndSurnameText"
        app:srcCompat="@drawable/shop" />

    <ImageView
        android:id="@+id/medicinesImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:contentDescription="@string/medicines_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameAndSurnameText"
        app:srcCompat="@drawable/medicines" />

    <TextView
        android:id="@+id/nameAndSurnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:text="@string/name_and_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offeredHelpText" />

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="82dp"
        android:layout_height="42dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:text="@string/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/volunteerPhoto"
        app:layout_constraintTop_toBottomOf="@+id/dogImage" />

    <TextView
        android:id="@+id/informationText"
        android:layout_width="347dp"
        android:layout_height="66dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/click_profile_information"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rejectBtn" />

    <Button
        android:id="@+id/acceptBtn"
        android:layout_width="116dp"
        android:layout_height="53dp"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="37dp"
        android:text="@string/accept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volunteerPhoto" />
</androidx.constraintlayout.widget.ConstraintLayout>