<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameAndSurnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:text="@string/name_and_surname"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/helpSeekerPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/help_seeker_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameAndSurnameText"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/distanceImage"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/map_point_image"
        app:layout_constraintStart_toEndOf="@+id/helpSeekerPhoto"
        app:layout_constraintTop_toBottomOf="@+id/nameAndSurnameText"
        app:srcCompat="@drawable/distance" />

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/distance"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/helpSeekerPhoto"
        app:layout_constraintTop_toBottomOf="@+id/distanceImage" />

    <TextView
        android:id="@+id/needsText"
        android:layout_width="54dp"
        android:layout_height="25dp"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/needs"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/dogImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpSeekerPhoto" />

    <TextView
        android:id="@+id/helpSeekerCommentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="49dp"
        android:text="@string/comments_from_help_seeker"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dogImage" />

    <ImageView
        android:id="@+id/shopImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/shop_image"
        app:layout_constraintEnd_toStartOf="@+id/dogImage"
        app:layout_constraintTop_toBottomOf="@+id/helpSeekerPhoto"
        app:srcCompat="@drawable/shop" />

    <ImageView
        android:id="@+id/dogImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="211dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/dog_image"
        app:layout_constraintEnd_toStartOf="@+id/medicinesImage"
        app:layout_constraintTop_toBottomOf="@+id/nameAndSurnameText"
        app:srcCompat="@drawable/dog" />

    <ImageView
        android:id="@+id/medicinesImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:contentDescription="@string/medicines_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceText"
        app:srcCompat="@drawable/medicines" />

    <TextView
        android:id="@+id/commentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="29dp"
        android:text="@string/comment"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpSeekerCommentText" />

    <Button
        android:id="@+id/offerHelpBtn"
        android:layout_width="140dp"
        android:layout_height="67dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:text="@string/offer_help"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentText" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>